miner change in css file

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(45deg, #0a0a0a, #3a4452);
+    background: linear-gradient(45deg, #060e29, #3a4452);
 }
 
 .calculator{
@@ -21,7 +21,7 @@ body{
     padding: 20px;
     border-radius: 16px;
     background: transparent;
-    box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
+    box-shadow: 0px 3px 15px rgba(76, 47, 209, 0.734);
 
 }
 
@@ -47,18 +47,20 @@ button{
     width: 60px;
     height: 60px;
     margin: 10px;
-    border-radius: 50%;
+    border-radius: 20%;
     background: transparent;
-    color: #ffffff;
+    color: #adbbf2;
     font-size: 20px;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1);
+    box-shadow: -8px -8px 15px rgba(105, 126, 217, 0.263);
     cursor: pointer;
 }
 
 .equalBtn{
-    background-color: #fb7c14;
+    background-color: #fb7c14f3;
+    box-shadow: -8px -8px 15px rgba(217, 185, 105, 0.242);
+
 }
 
 .operator{
-    color: #6dee0a;
+    color: #25c1aa;
 }
